tests/suite/fail/generated/borrow/fail_move_take_s.ny
fn take(x: string) -> void { print(x) }
fn main() {
    let s = "hello"
    take(s)
    print(s) //~ ERROR was moved
}
